--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ https://templatemo.com/tm-531-reflux
 					Here you will have my CV and more extensive information about my professional career.
                   </p>
                   <div class="white-button">
-                    <a href="#">Read More</a>
+                    <a href="https://www.linkedin.com/in/roberto-lama-rodr%C3%ADguez-2769a41b4/">See More</a>
                   </div>
                 </div>
               </div>
