--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
       rel="stylesheet"
     />
-
+	<link rel="shortcut icon" type="image/x-icon" href="assets/images/rw_logo.png">
     <title>RoberWare</title>
 <!--
 Reflux Template
