--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/rw_logo.png"/>
+	<link rel="shortcut icon" type="image/x-icon" href="assets/images/rw_logo.png">
     <title>RoberWare</title>
 <!--
 Reflux Template
@@ -600,84 +600,25 @@ https://templatemo.com/tm-531-reflux
           </div>
         </div>
       </section>
-
-      <section class="section contact-me" data-section="section4">
-        <div class="container">
-          <div class="section-heading">
-            <h2>Contact Me</h2>
-            <div class="line-dec"></div>
-            <span
-              >Via e-mail: roberlama@gmail.com
-              The form below just doesn't work.</span
-            >
-          </div>
-          <div class="row">
-            <div class="right-content">
-              <div class="container">
-                <form id="contact" action="" method="post">
-                  <div class="row">
-                    <div class="col-md-6">
-                      <fieldset>
-                        <input
-                          name="name"
-                          type="text"
-                          class="form-control"
-                          id="name"
-                          placeholder="Your name..."
-                          required=""
-                        />
-                      </fieldset>
-                    </div>
-                    <div class="col-md-6">
-                      <fieldset>
-                        <input
-                          name="email"
-                          type="text"
-                          class="form-control"
-                          id="email"
-                          placeholder="Your email..."
-                          required=""
-                        />
-                      </fieldset>
-                    </div>
-                    <div class="col-md-12">
-                      <fieldset>
-                        <input
-                          name="subject"
-                          type="text"
-                          class="form-control"
-                          id="subject"
-                          placeholder="Subject..."
-                          required=""
-                        />
-                      </fieldset>
-                    </div>
-                    <div class="col-md-12">
-                      <fieldset>
-                        <textarea
-                          name="message"
-                          rows="6"
-                          class="form-control"
-                          id="message"
-                          placeholder="Your message..."
-                          required=""
-                        ></textarea>
-                      </fieldset>
-                    </div>
-                    <div class="col-md-12">
-                      <fieldset>
-                        <button type="submit" id="form-submit" class="button">
-                          Send Message
-                        </button>
-                      </fieldset>
-                    </div>
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+	  
+	  <form action="mailto: roberlama@gmail.com">
+	      <section class="section contact-me" data-section="section4">
+	        <div class="container">
+	          <div class="section-heading">
+	            <h2>Contact Me</h2>
+	            <div class="line-dec"></div>
+	            <span
+	              >Via e-mail: roberlama@gmail.com</span
+	            >
+	          </div>
+	        </div>
+		      <div style="text-align: center;float: top;">
+	          <button type="submit" id="form-submit" class="button" style="  display: block;margin-left: auto;margin-right: auto;">
+	            Send Message
+	          </button>
+	          </div>	        
+	      </section>
+      </form>
     </div>
 
     <!-- Scripts -->
