--- a/thanks.html
+++ b/thanks.html
@@ -45,7 +45,7 @@ https://templatemo.com/tm-531-reflux
             </div>
             <nav class="main-nav" role="navigation">
               <ul class="main-menu">
-                <li><a href="https://roberware.github.io/">Go to website</a></li>
+                <li><a href="/index.html">Go to website</a></li>
               </ul>
             </nav>
             <div class="social-network">
