--- a/thanks.html
+++ b/thanks.html
@@ -41,13 +41,8 @@ https://templatemo.com/tm-531-reflux
             </div>
             <div class="author-content">
               <h4>RoberWare</h4>
-              <span>Developer</span>
+              <span>Telecom. Student at University of Seville</span>
             </div>
-            <nav class="main-nav" role="navigation">
-              <ul class="main-menu">
-                <li><a href="/index.html">Go to website</a></li>
-              </ul>
-            </nav>
             <div class="social-network">
               <ul class="soial-icons">
                 <li>
@@ -91,6 +86,9 @@ https://templatemo.com/tm-531-reflux
             <div class="line-dec"></div>
             <span>Now you can browse this website and see all my work.</span>
           </div>
+	  <div class="white-button">
+	    <a href="/index.html">See More</a>
+	  </div>
       </section>
     </div>
 
