--- a/thanks.html
+++ b/thanks.html
@@ -86,7 +86,7 @@ https://templatemo.com/tm-531-reflux
             <div class="line-dec"></div>
             <span>Now you can browse this website and see all my work.</span>
           </div>
-	  <div class="white-button">
+	  <div class="white-button" style="display:block;text-align:center">
 	    <a href="/index.html">See More</a>
 	  </div>
       </section>
