--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ https://templatemo.com/tm-531-reflux
             </div>
             <div class="author-content">
               <h4>RoberWare</h4>
-              <span>Developer</span>
+              <span>Telecom. Student at University of Seville</span>
             </div>
             <nav class="main-nav" role="navigation">
               <ul class="main-menu">
