--- a/lacarta/index.html
+++ b/lacarta/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
       rel="stylesheet"
     />
-	<link rel="shortcut icon" type="image/x-icon" href="assets/images/rw_logo.png">
+	<link rel="shortcut icon" type="image/x-icon" href="/assets/images/rw_logo.png">
     <title>RoberWare</title>
 <!--
 Reflux Template
@@ -22,10 +22,10 @@ https://templatemo.com/tm-531-reflux
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css" />
-    <link rel="stylesheet" href="assets/css/templatemo-style.css" />
-    <link rel="stylesheet" href="assets/css/owl.css" />
-    <link rel="stylesheet" href="assets/css/lightbox.css" />
+    <link rel="stylesheet" href="/assets/css/fontawesome.css" />
+    <link rel="stylesheet" href="/assets/css/templatemo-style.css" />
+    <link rel="stylesheet" href="/assets/css/owl.css" />
+    <link rel="stylesheet" href="/assets/css/lightbox.css" />
   </head>
 
   <body>
@@ -37,7 +37,7 @@ https://templatemo.com/tm-531-reflux
           <i class="fa fa-times" id="menu-close"></i>
           <div class="container">
             <div class="image">
-              <a href="#"><img src="assets/images/rw_logo_bg.png" alt="" /></a>
+              <a href="#"><img src="/assets/images/rw_logo_bg.png" alt="" /></a>
             </div>
             <div class="author-content">
               <h4>RoberWare</h4>
