--- a/lacarta/index.html
+++ b/lacarta/index.html
@@ -144,45 +144,43 @@ You can also see all the other letters, share them or delete them from your hist
             <h2>Privacy</h2>
             <div class="line-dec"></div>
             <a href="https://github.com/RoberWare/lacarta/blob/master/privacy_es.md"
-            <span
-              >My Professional skillset</span
-            >
+            <span>Last revision</span>
+		All user data does not leave your device or is stored on any internal server of the application. The consultation of nearby restaurants is done through the Google API.
           </div>
           <div class="row">
             <div class="col-md-6">
               <div class="service-item">
                 <div class="first-service-icon service-icon"></div>
-                <h4>API implementation</h4>
+                <h4>GPS location</h4>
                 <p>
-                  Especially I have used Google's API, for Maps and Youtube. But I can implement any.
+                  To store the position where you have scanned the QR.
                 </p>
               </div>
             </div>
             <div class="col-md-6">
               <div class="service-item">
                 <div class="second-service-icon service-icon"></div>
-                <h4>Python, Java &amp; C</h4>
+                <h4>Storage</h4>
                 <p>
-                  I have been programming in python for 12 years. Recently I learnt Java and C.
-                  I have developed dynamic and static web pages in eclipse using pure Java and Servlets.
+                  To store the menus data.
                 </p>
               </div>
             </div>
             <div class="col-md-6">
               <div class="service-item">
                 <div class="third-service-icon service-icon"></div>
-                <h4>Teamwork & Collaboration</h4>
+                <h4>Camera</h4>
                 <p>
-                  I have worked in small work groups to develop several projects.
+                  To scan QR codes.
                 </p>
               </div>
             </div>
             <div class="col-md-6">
               <div class="service-item">
                 <div class="fourth-service-icon service-icon"></div>
-                <h4>App developer for Linux, Windows and Android</h4>
+                <h4>Vibration</h4>
                 <p>
-                  I program mainly in python, with Kivy framework which easily I can port to different platforms.
+                  When you scan a code the device vibrates.
                 </p>
               </div>
             </div>
