--- a/lacarta/index.html
+++ b/lacarta/index.html
@@ -145,7 +145,9 @@ You can also see all the other letters, share them or delete them from your hist
             <div class="line-dec"></div>
             <a href="https://github.com/RoberWare/lacarta/blob/master/privacy_es.md"
             <span>Last revision</span>
-		All user data does not leave your device or is stored on any internal server of the application. The consultation of nearby restaurants is done through the Google API.
+	    <p>All user data does not leave your device or is stored on any internal server of the application. 
+		    The consultation of nearby restaurants is done through the Google API.
+	    </p>
           </div>
           <div class="row">
             <div class="col-md-6">
