--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
 	<link rel="shortcut icon" type="image/x-icon" href="assets/images/rw_logo.png">
-    <title>RoberWare</title>
+    <title>Roberto Lama Rodríguez</title>
 <!--
 Reflux Template
 https://templatemo.com/tm-531-reflux
@@ -37,18 +37,20 @@ https://templatemo.com/tm-531-reflux
           <i class="fa fa-times" id="menu-close"></i>
           <div class="container">
             <div class="image">
-              <a href="#"><img src="assets/images/rw_logo_bg.png" alt="" /></a>
+              <a href="#"><img src="assets/images/roblamrod.png" alt="" /></a>
             </div>
             <div class="author-content">
-              <h4>RoberWare</h4>
+              <h4>Roberto Lama Rodríguez</h4>
               <span>Telecom. Student at University of Seville</span>
             </div>
             <nav class="main-nav" role="navigation">
               <ul class="main-menu">
                 <li><a href="#section1">About Me</a></li>
-                <li><a href="#section2">What I’m good at</a></li>
-                <li><a href="#section3">My Work</a></li>
+                <li><a href="#section2">My experience</a></li>
+                <li><a href="#section3">Education</a></li>
                 <li><a href="#section4">Contact Me</a></li>
+                <!-- <li><a href="#section4">What I’m good at</a></li> 
+                <li><a href="#section5">My Work</a></li> -->
               </ul>
             </nav>
             <div class="social-network">
@@ -93,8 +95,7 @@ https://templatemo.com/tm-531-reflux
             <h2>About Me</h2>
             <div class="line-dec"></div>
             <span
-              >I study Telecommunication Technologies Engineering at the University of Seville.
-              As a hobby I develop projects related to my field.</span
+              >I study Telecommunication Technologies Engineering at the University of Seville.</span
             >
             
           </div>
@@ -118,6 +119,7 @@ https://templatemo.com/tm-531-reflux
               </div>
             </div>
           </div>
+          <!--
           <div class="right-image-post">
             <div class="row">
               <div class="col-md-6">
@@ -139,9 +141,165 @@ https://templatemo.com/tm-531-reflux
               </div>
             </div>
           </div>
+          -->
         </div>
       </section>
 
+      <section class="section my-experience" data-section="section2">
+        <div class="section-heading">
+          <h2>My experience</h2>
+          <div class="line-dec"></div>
+
+          <div class="left-image-post">
+            <div class="row">
+                <div class="col-md-6">
+                  <div class="left-image company_logo">
+                    <img src="assets/images/logo_us.jpg" alt="" />
+                  </div>
+                </div>
+                <div class="col-md-6">
+                <div class="right-text company_description">
+                  <h4>Research grant. Department of Telematics</h4>
+                  <p>
+                    Nov. 2022 - present
+                    <ul>
+                     <li> - Web Attack Traffic Generation and Modeling</li>
+                     <li> - Attack Detection using Snort, ModSecurity, Nemesida... </li>
+                     <li> - Detector performance evaluation</li>
+                    </ul>
+                  </p>
+                  <div class="white-button">
+                    <a href="https://www.linkedin.com/in/roberto-lama-rodr%C3%ADguez-2769a41b4/">See More</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        <div class="left-image-post">
+          <div class="row">
+              <div class="col-md-6">
+                <div class="left-image company_logo">
+                  <img src="assets/images/innotec_logo.png" alt="" />
+                </div>
+              </div>
+              <div class="col-md-6">
+              <div class="right-text company_description">
+                <h4>Cybersecurity Analyst</h4>
+                <p>
+                  I've been working as a Cybersecurity Analyst at Entelgy Innotec Security for 9 months.
+                  Some of my tasks were:
+                  <ul>
+                   <li> - Development of cyber intelligence tools</li>
+                   <li> - OSINT investigations</li>
+                   <li> - Dialogue and search for suppliers</li>
+                   <li> - Deep web</li>
+                  </ul>
+                </p>
+                <div class="white-button">
+                  <a href="https://www.linkedin.com/in/roberto-lama-rodr%C3%ADguez-2769a41b4/">See More</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section my-education" data-section="section3">
+        <div class="section-heading">
+          <h2>Education</h2>
+          <div class="line-dec"></div>
+        <div class="left-image-post">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="left-image company_logo">
+                <img src="assets/images/colegio_teleco.jpg" alt="" />
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="right-text company_description">
+                <h4> Master's Degree in Telecommunication Engineering </h4>
+                <p>
+                 I'm currently studying a Master's Degree in Telecommunication Engineering at the University of Seville.
+                </p>
+                <div class="white-button">
+                  <a href="https://www.linkedin.com/in/roberto-lama-rodr%C3%ADguez-2769a41b4/">See More</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6"></div>
+          </div>
+        </div>
+
+        <div class="left-image-post">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="left-image company_logo">
+                <img src="assets/images/logo_us.jpg" alt="" />
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="right-text company_description">
+                <h4> Dregree in Telecommunications Engineering, Telematics </h4>
+                <p>
+                  I finished my degree in telecommunication engineering with distinction in the final project.
+                </p>
+                <div class="white-button">
+                  <a href="https://www.linkedin.com/in/roberto-lama-rodr%C3%ADguez-2769a41b4/">See More</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6"></div>
+          </div>
+        </div>
+
+        <div class="left-image-post">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="left-image company_logo">
+                <img src="assets/images/infosec_logo.jpg" alt="" />
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="right-text company_description">
+                <h4> Python for Cybersecurity</h4>
+                <p>
+                  Infosec - Expedition ago. 2022
+                </p>
+                <div class="white-button">
+                  <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/HG9JX9HZD3PM">Show credential</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6"></div>
+          </div>
+        </div>
+
+        <div class="left-image-post">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="left-image company_logo">
+                <img src="assets/images/ibm_logo.jpg" alt="" />
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="right-text company_description">
+                <h4> Cibersecurity Analyst </h4>
+                <p>
+                  IBM - Expedition ago. 2021
+                </p>
+                <div class="white-button">
+                  <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/2QU3FZBHG8R4">Show credential</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6"></div>
+          </div>
+        </div>
+
+      </section>
+
+      <!--
       <section class="section my-services" data-section="section2">
         <div class="container">
           <div class="section-heading">
@@ -192,7 +350,8 @@ https://templatemo.com/tm-531-reflux
           </div>
         </div>
       </section>
-
+      -->
+      <!--
       <section class="section my-work" data-section="section3">
         <div class="container">
           <div class="section-heading">
@@ -213,6 +372,14 @@ https://templatemo.com/tm-531-reflux
                     name="isotope-filter"
                   />
                   <span>all</span></label
+                >
+                <label
+                  ><input
+                    type="radio"
+                    data-type="portero"
+                    name="isotope-filter"
+                  />
+                  <span>PorteroPI</span></label
                 >
                 <label
                   ><input
@@ -600,7 +767,7 @@ https://templatemo.com/tm-531-reflux
           </div>
         </div>
       </section>
-	  
+	     -->
 	  <form action="mailto: roberlama@gmail.com">
 	      <section class="section contact-me" data-section="section4">
 	        <div class="container">
@@ -610,6 +777,10 @@ https://templatemo.com/tm-531-reflux
 	            <span
 	              >Via e-mail: roberlama@gmail.com</span
 	            >
+	            <div class="line-white"></div>
+	            <span
+	              >Telephone: +34 666 96 89 82</span
+              >
 	          </div>
 	        </div>
 		      <div style="text-align: center;float: top;">
