--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ https://templatemo.com/tm-531-reflux
         <div class="left-image-post">
           <div class="row">
               <div class="col-md-6">
-                <div class="left-image company_logo">
+                <div class="company_logo">
                   <img src="assets/images/innotec_logo.png" alt="" />
                 </div>
               </div>
@@ -212,7 +212,7 @@ https://templatemo.com/tm-531-reflux
         <div class="left-image-post">
           <div class="row">
             <div class="col-md-6">
-              <div class="left-image company_logo">
+              <div class="company_logo">
                 <img src="assets/images/colegio_teleco.jpg" alt="" />
               </div>
             </div>
@@ -234,7 +234,7 @@ https://templatemo.com/tm-531-reflux
         <div class="left-image-post">
           <div class="row">
             <div class="col-md-6">
-              <div class="left-image company_logo">
+              <div class="company_logo">
                 <img src="assets/images/logo_us.jpg" alt="" />
               </div>
             </div>
@@ -256,7 +256,7 @@ https://templatemo.com/tm-531-reflux
         <div class="left-image-post">
           <div class="row">
             <div class="col-md-6">
-              <div class="left-image company_logo">
+              <div class="company_logo">
                 <img src="assets/images/infosec_logo.jpg" alt="" />
               </div>
             </div>
@@ -278,7 +278,7 @@ https://templatemo.com/tm-531-reflux
         <div class="left-image-post">
           <div class="row">
             <div class="col-md-6">
-              <div class="left-image company_logo">
+              <div class="company_logo">
                 <img src="assets/images/ibm_logo.jpg" alt="" />
               </div>
             </div>
